--- a/Store.Data/Store.Data.csproj
+++ b/Store.Data/Store.Data.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Repositories\CodesTvaRepository.cs" />
     <Compile Include="Repositories\CPT_ParametrageComptableRepository.cs" />
     <Compile Include="Repositories\DepotRepository.cs" />
+    <Compile Include="Repositories\DevisesRepository.cs" />
     <Compile Include="Repositories\DoclieartRepoitory.cs" />
     <Compile Include="Repositories\DoclieRepository.cs" />
     <Compile Include="Repositories\DocumentCommercialDetailRepository.cs" />
